deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipper
  namespace: shipper-backend
spec:
  # type: LoadBalancer
  selector:
    app: shipper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
