deployment/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipper-ingress
  namespace: shipper-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt" # Add this line
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.shipper0.tech
      secretName: tls-cert
  rules:
    - host: api.shipper0.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipper
                port:
                  number: 80
