deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipper-ingress
  namespace: shipper-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.shipper0.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipper
            port:
              number: 80
